test/corpus/tests.txt
=============
Definition
=============

:: add2 ( a b c -- x y ) a b + c ;
---

(source_file
  (word_defn
    (sname)
    (stack_effect
      (effect
        (sname)
        (sname)
        (sname))
      (effect
        (sname)
        (sname)))
    (expr
      (word)
      (word)
      (word
        (builtin_math))
      (word))))

=================
Empty String Literal
=================

""

---

(source_file
  (string)
)

=================
String Literal
=================

"a"

---

(source_file
  (string)
)

=================
String Literals
=================

"a" "a" "a"

---

(source_file
  (string)
  (string)
  (string)
)

=================
numbers
=================

1 20 30.4

---

(source_file
  (number)
  (number)
  (number)
)
